--- a/templates/form.html
+++ b/templates/form.html
@@ -13,7 +13,7 @@
     <!-- features = df[['no2','so2','pm2_5','pm10','Leq','DO','pH','BOD','Land_use','NBR']] -->
 <div class="wrapper">
     <form action="{{url_for('submit')}}" method="POST">
-        <h1>Rainfall Prediction</h1>
+        <h1>Rainfall Predictio</h1>
         <div class="input-box">
             <input type="text" placeholder="Min Temperature (in °C)" name='mintemp' required>
             <!-- <i class='bx bx-buildings'></i> -->
